sandwich fixed the app scrollbar for landing page - universities

--- a/salaryfy/src/App.css
+++ b/salaryfy/src/App.css
@@ -11,23 +11,8 @@ html, body, #root {
   font-family: "Lexend", Helvetica;
 }
 
-
-/* Hide scrollbar for desktop */
-@media (min-width: 768px) {
-  .app-scrollbar {
-    overflow: hidden;
-  }
-}
-
-/* Show scrollbar for mobile */
-@media (max-width: 767px) {
-  .app-scrollbar {
-    overflow: auto;
-  }
-}
-
 .app-scrollbar {
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .app-scrollbar::-webkit-scrollbar {
